--- a/tp-admin-master/app/www/view/activity/noticedetail.html
+++ b/tp-admin-master/app/www/view/activity/noticedetail.html
@@ -47,7 +47,7 @@
       <p data-v-05c33b10="" class="hr1px"></p>
       <div data-v-05c33b10="" class="wrapExplain">
         <p>尊敬的会员，您好：</p>
-        <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;微信支付方式已经更换。请您进入官网，点击微信支付，输入您的充值金额，点击充值后，使用微信扫一扫进行扫码付款，付款成功后返回此二维码页面填写信息提交您的订单即可到账哦。【盈发彩票】祝您游戏愉快，盈利多多哦~</p>
+        <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;微信支付方式已经更换。添加微信kris816,转账备注天天彩票账户昵称，付款成功后，返回天天彩票网站微信支付，输入您的充值金额以及微信昵称，提交您的订单即可到账哦。【天天彩票】祝您游戏愉快，盈利多多哦~</p>
       </div>
     </article>
   </div>
