--- a/tp-admin-master/app/www/view/usercenter/betrecord.html
+++ b/tp-admin-master/app/www/view/usercenter/betrecord.html
@@ -52,12 +52,28 @@
         </ul>
       </div>
       <div data-v-1558f0ab="" class="bd dontSelect">
-        <div data-v-1558f0ab="" class="scrollBox1">
+        <!-- 全部 -->
+        <div data-v-1558f0ab="" class="scrollBox">
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>投注时间</li>
+            <li>投注类型</li>
+            <li>投注号码</li>
+            <li>投注钱数</li>
+            <li>中奖金额</li>
+          </ul>
+          <ul>
+            <li>2017/11/28</li>
+            <li>大发快3</li>
+            <li>单</li>
+            <li>2元</li>
+            <li>4元</li>
+          </ul>
+          <ul>
+            <li>2017/11/28</li>
+            <li>大发快3</li>
+            <li>8</li>
+            <li>2元</li>
+            <li>未中奖</li>
           </ul>
           <!-- 暂无记录 -->
           <div data-v-1558f0ab="" class="touchScroll" style='display:none;'>
@@ -68,25 +84,108 @@
           </div>
           <!-- 暂无记录 -->
         </div>
-        <div data-v-1558f0ab="" class="scrollBox1"><!----></div>
-        <div data-v-1558f0ab="" class="scrollBox1"><!----></div>
-        <div data-v-1558f0ab="" class="scrollBox1"><!----></div>
+        <!-- 全部 -->
+        <!-- 已中奖 -->
+        <div data-v-1558f0ab="" class="scrollBox ds">
+          <ul>
+            <li>投注时间</li>
+            <li>投注类型</li>
+            <li>投注号码</li>
+            <li>投注钱数</li>
+            <li>中奖状态</li>
+          </ul>
+          <ul>
+            <li>2017/11/28</li>
+            <li>大发快3</li>
+            <li>单</li>
+            <li>2元</li>
+            <li>4元</li>
+          </ul>
+          <ul>
+            <li>2017/11/28</li>
+            <li>大发快3</li>
+            <li>8</li>
+            <li>2元</li>
+            <li>6元</li>
+          </ul>
+          <!-- 暂无记录 -->
+          <div data-v-1558f0ab="" class="touchScroll" style='display:none;'>
+            <div data-v-1558f0ab="" class="fullPageMsg">
+              <div data-v-1558f0ab="" class="fullPageIcon iconfont"></div>
+              <p data-v-1558f0ab="">暂无记录</p>
+            </div>
+          </div>
+          <!-- 暂无记录 -->
+        </div>
+        <!-- 已中奖 -->
+        <!-- 未中奖 -->
+        <div data-v-1558f0ab="" class="scrollBox ds">
+            <ul>
+            <li>投注时间</li>
+            <li>投注类型</li>
+            <li>投注号码</li>
+            <li>投注钱数</li>
+            <li>中奖状态</li>
+          </ul>
+          <ul>
+            <li>2017/11/28</li>
+            <li>大发快3</li>
+            <li>单</li>
+            <li>2元</li>
+            <li>未中奖</li>
+          </ul>
+          <ul>
+            <li>2017/11/28</li>
+            <li>大发快3</li>
+            <li>8</li>
+            <li>2元</li>
+            <li>未中奖</li>
+          </ul>
+          <!-- 暂无记录 -->
+          <div data-v-1558f0ab="" class="touchScroll" style='display:none;'>
+            <div data-v-1558f0ab="" class="fullPageMsg">
+              <div data-v-1558f0ab="" class="fullPageIcon iconfont"></div>
+              <p data-v-1558f0ab="">暂无记录</p>
+            </div>
+          </div>
+          <!-- 暂无记录 -->
+        </div>
+        <!-- 未中奖 -->
+        <!-- 等待开奖 -->
+        <div data-v-1558f0ab="" class="scrollBox ds">
+          <ul>
+            <li>投注时间</li>
+            <li>投注类型</li>
+            <li>投注号码</li>
+            <li>投注钱数</li>
+            <li>中奖状态</li>
+          </ul>
+          <ul>
+            <li>2017/11/28</li>
+            <li>大发快3</li>
+            <li>单</li>
+            <li>2元</li>
+            <li>等待开奖</li>
+          </ul>
+          <ul>
+            <li>2017/11/28</li>
+            <li>大发快3</li>
+            <li>8</li>
+            <li>2元</li>
+            <li>等待开奖</li>
+          </ul>
+          <!-- 暂无记录 -->
+          <div data-v-1558f0ab="" class="touchScroll" style='display:none;'>
+            <div data-v-1558f0ab="" class="fullPageMsg">
+              <div data-v-1558f0ab="" class="fullPageIcon iconfont"></div>
+              <p data-v-1558f0ab="">暂无记录</p>
+            </div>
+          </div>
+          <!-- 暂无记录 -->
+        </div>
+        <!-- 等待开奖 -->
       </div>
-    </div>
-    <div data-v-2b5ddb46="" class="_problemBox" data-v-1558f0ab="" style="display: none;">
-      <div data-v-2b5ddb46="" class="blackBg"></div>
-      <div data-v-2b5ddb46="" class="moreLayer">
-        <ul data-v-2b5ddb46="">
-          <li data-v-2b5ddb46="" style="display: none;"><a data-v-2b5ddb46="">选择登录帐号</a></li>
-          <li data-v-2b5ddb46=""><a data-v-2b5ddb46="">今天</a> <span data-v-2b5ddb46="" style="display: none;"></span></li>
-          <li data-v-2b5ddb46=""><a data-v-2b5ddb46="">昨天</a> <span data-v-2b5ddb46="" style="display: none;"></span></li>
-          <li data-v-2b5ddb46=""><a data-v-2b5ddb46="">七天</a> <span data-v-2b5ddb46="" style="display: none;"></span></li>
-        </ul>
-        <ul data-v-2b5ddb46="">
-          <li data-v-2b5ddb46=""><a data-v-2b5ddb46="">取消</a></li>
-        </ul>
-      </div>
-    </div>
+    </div>    
   </div>
 </div>
 </body>
