--- a/tp-admin-master/app/www/view/usercenter/billrecord.html
+++ b/tp-admin-master/app/www/view/usercenter/billrecord.html
@@ -47,32 +47,47 @@
     <div data-v-1558f0ab="" id="leftTabBox">
       <div data-v-1558f0ab="" class="hd">
         <ul data-v-1558f0ab="">
-          <li data-v-1558f0ab="" class="">所有类型</li>
-          <li data-v-1558f0ab="" class="on">提现记录</li>
+          <li data-v-1558f0ab="" class="on">所有类型</li>
+          <li data-v-1558f0ab="" class="">提现记录</li>
           <li data-v-1558f0ab="" class="">充值记录</li>
         </ul>
       </div>
       <div data-v-1558f0ab="" class="bd dontSelect">
         <!-- 所有类型 -->
-        <div data-v-1558f0ab="" class="scrollBox">          
+        <div data-v-1558f0ab="" class="scrollBox">  
             <ul>
-               <li>2017/11/28日</li>
-               <li>充值500</li>
+               <li>操作时间</li>
+               <li>操作类型</li>
+               <li>操作状态</li>
+               <li>金额</li>
+               <li>状态</li>
+            </ul>        
+            <ul>
+               <li>2017/11/28</li>
+               <li>银行卡</li>
+               <li>提现</li>
+               <li>500</li>
                <li>成功</li>
             </ul>
             <ul>
-               <li>2017/11/28日</li>
-               <li>提现500</li>
-               <li>失败</li>
-            </ul>
-            <ul>
-               <li>2017/11/28日</li>
-               <li>充值500</li>
+               <li>2017/11/28</li>
+               <li>微信</li>
+               <li>充值</li>
+               <li>500</li>
                <li>成功</li>
             </ul>
             <ul>
-               <li>2017/11/28日</li>
-               <li>提现500</li>
+               <li>2017/11/28</li>
+               <li>支付宝</li>
+               <li>充值</li>
+               <li>500</li>
+               <li>成功</li>
+            </ul>
+            <ul>
+               <li>2017/11/28</li>
+               <li>银行卡</li>
+               <li>提现</li>
+               <li>500</li>
                <li>成功</li>
             </ul>
           <!-- 暂无记录 -->
@@ -88,22 +103,30 @@
         <!-- 提现记录 -->
         <div data-v-1558f0ab="" class="scrollBox ds">
             <ul>
-               <li>2017/11/28日</li>
+               <li>操作时间</li>
+               <li>操作类型</li>
+               <li>操作状态</li>
+               <li>金额</li>
+               <li>状态</li>
+            </ul>        
+            <ul>
+               <li>2017/11/28</li>
+               <li>银行卡</li>
+               <li>提现</li>
                <li>500</li>
                <li>成功</li>
             </ul>
             <ul>
-               <li>2017/11/28日</li>
-               <li>500</li>
-               <li>失败</li>
-            </ul>
-            <ul>
-               <li>2017/11/28日</li>
+               <li>2017/11/28</li>
+               <li>银行卡</li>
+               <li>提现</li>
                <li>500</li>
                <li>成功</li>
             </ul>
             <ul>
-               <li>2017/11/28日</li>
+               <li>2017/11/28</li>
+               <li>银行卡</li>
+               <li>提现</li>
                <li>500</li>
                <li>成功</li>
             </ul>
@@ -118,25 +141,33 @@
         </div>
         <!-- 提现记录 -->
         <!-- 充值记录 -->
-        <div data-v-1558f0ab="" class="scrollBox">
+        <div data-v-1558f0ab="" class="scrollBox ds">
             <ul>
-               <li>2017/11/28日</li>
-               <li>600</li>
+               <li>操作时间</li>
+               <li>操作类型</li>
+               <li>操作状态</li>
+               <li>金额</li>
+               <li>状态</li>
+            </ul>        
+            <ul>
+               <li>2017/11/28</li>
+               <li>银行卡</li>
+               <li>充值</li>
+               <li>500</li>
                <li>成功</li>
             </ul>
             <ul>
-               <li>2017/11/28日</li>
-               <li>600</li>
-               <li>失败</li>
-            </ul>
-            <ul>
-               <li>2017/11/28日</li>
-               <li>600</li>
+               <li>2017/11/28</li>
+               <li>支付宝</li>
+               <li>充值</li>
+               <li>500</li>
                <li>成功</li>
             </ul>
             <ul>
-               <li>2017/11/28日</li>
-               <li>600</li>
+               <li>2017/11/28</li>
+               <li>微信</li>
+               <li>充值</li>
+               <li>500</li>
                <li>成功</li>
             </ul>
             <!-- 暂无记录 -->
