--- a/tp-admin-master/app/www/view/usercenter/notice.html
+++ b/tp-admin-master/app/www/view/usercenter/notice.html
@@ -48,7 +48,7 @@
     <div data-v-afccef42="" class="touchScroll">
       <div data-v-afccef42=""><a data-v-afccef42="" href="{:url('www/usercenter/noticedetail')}" class="active">
         <div data-v-afccef42="">
-          <p data-v-afccef42="">支付宝充值方式更换通知</p>
+          <p data-v-afccef42="">重要通知【微信充值方式更换通知】</p>
           <span data-v-afccef42="">2017-09-26 16:45:15</span></div>
         </a>
         <div data-v-afccef42="" class="hr1px"></div>
