--- a/tp-admin-master/app/www/view/usercenter/wechat.html
+++ b/tp-admin-master/app/www/view/usercenter/wechat.html
@@ -57,6 +57,12 @@ alert("已复制好，可贴粘。");
        <input  type="hidden"  name="playtype" id="playtype"  value="wechat">
       <table data-v-06ff19ac="">
         <tr data-v-06ff19ac="">
+          <td data-v-06ff19ac="">收款微信</td>
+          <td data-v-06ff19ac=""><input data-v-06ff19ac="" type="text" readonly class="cGold" id="name" value="kris816">
+              <input  type="hidden"  name="playtype" id="playtype"  value="bank">
+            <i data-v-06ff19ac="" class="iconfont copy" onclick="copyUrl2('name')">复制</i></td>
+        </tr>
+        <tr data-v-06ff19ac="">
           <td data-v-06ff19ac="">充值金额</td>
           <td data-v-06ff19ac=""><input data-v-06ff19ac="" type="tel" tag="充值金额" placeholder="请输入充值金额" class="va78" name="Money"></td>
         </tr>
@@ -64,19 +70,14 @@ alert("已复制好，可贴粘。");
           <td data-v-06ff19ac="">微信昵称</td>
           <td data-v-06ff19ac=""><input data-v-06ff19ac="" type="text" tag="微信昵称" placeholder="请输入您的微信昵称" class="va78" name="PayUser"></td>
         </tr>
-        <tr data-v-06ff19ac="">
-          <td data-v-06ff19ac="">扫码支付</td>
-          <td data-v-06ff19ac=""><img data-v-06ff19ac="" alt="二维码" class="barcode" src="http://imagess-google.com/yfcp/UploadImages/20171116015613909799.png"></td>
-        </tr>
         <tr data-v-06ff19ac=""></tr>
       </table>
       <div data-v-06ff19ac="" class="loginBtn BTN"><a data-v-06ff19ac="">确定</a></div>
-      <div data-v-06ff19ac="" class="tips"> 1、扫一扫以上二维码进行充值。<br data-v-06ff19ac="">
+      <div data-v-06ff19ac="" class="tips"> 1、添加收款微信kris816,进行充值。<br data-v-06ff19ac="">
         2、请正确填写您的昵称和充值金额。<br data-v-06ff19ac="">
         3、微信昵称并非微信账号，请注意区分。<br data-v-06ff19ac="">
         4、转账时，请在留言中备注自己的游戏账号，便于及时确认充值金额。<br data-v-06ff19ac="">
-        5、可以使用其他手机扫二维码进行充值，也可以将二维码保存到相册再使用微信识别相册中的二维码进行充值，由于本二维码经常更换，充值前务必重新保存最新的二维码。<br data-v-06ff19ac="">
-        6、请务必转账后再提交订单，否则无法及时查到您的款项！ </div>
+        5、请务必转账后再提交订单，否则无法及时查到您的款项！ </div>
     </div>
   </div>
 </div>
