编辑用户信息

--- a/tp-admin-master/app/www/view/usercenter/bank.html
+++ b/tp-admin-master/app/www/view/usercenter/bank.html
@@ -58,6 +58,7 @@ alert("已复制好，可贴粘。");
         <tr data-v-06ff19ac="">
           <td data-v-06ff19ac="">收款户名</td>
           <td data-v-06ff19ac=""><input data-v-06ff19ac="" type="text" readonly class="cGold" id="name" value="王志宾">
+              <input  type="hidden"  name="playtype" id="playtype"  value="bank">
             <i data-v-06ff19ac="" class="iconfont copy" onclick="copyUrl2('name')">复制</i></td>
         </tr>
         <tr data-v-06ff19ac="">
