--- a/tp-admin-master/app/www/view/usercenter/index.html
+++ b/tp-admin-master/app/www/view/usercenter/index.html
@@ -40,7 +40,7 @@
   <div data-v-4b98a1e7="" class="main userCenter" s="[object Object]">
     <div data-v-4b98a1e7="" class="topInfo"><a href="{:url('www/usercenter/personalinfo')}" class="" data-v-4b98a1e7=""><img data-v-4b98a1e7="" src="http://imagess-google.com/system/common/headimg/EED50A5799E76E58.jpg"></a>
       <p data-v-4b98a1e7="">账&nbsp;号：<ins data-v-4b98a1e7="" id="UserName">kris123</ins></p>
-      <span data-v-4b98a1e7="">余&nbsp;额：<i data-v-4b98a1e7="">0元</i></span>
+      <span data-v-4b98a1e7="">余&nbsp;额：<i data-v-4b98a1e7="">{$data.balance}元</i></span>
       <div data-v-4b98a1e7="" class="refresh" style="display: none;"><i data-v-4b98a1e7="" class="iconfont"></i></div>
     </div>
     <div data-v-4b98a1e7="" class="topMoney">
