--- a/tp-admin-master/app/www/view/usercenter/plstatement.html
+++ b/tp-admin-master/app/www/view/usercenter/plstatement.html
@@ -41,16 +41,16 @@
     <p>我的账户</p>
     </a></nav>
   <div data-v-e20c12c8="" class="main PLS" s="[object Object]">
-    <div data-v-e20c12c8="" class="PLSinfo"> 盈利金额 <span data-v-e20c12c8="">0.00</span></div>
+    <div data-v-e20c12c8="" class="PLSinfo"> 盈利金额 <span data-v-e20c12c8="">{$data.allmoney}</span></div>
     <div data-v-e20c12c8="" class="PLSpm"><i data-v-e20c12c8="" class="iconfont"></i> 盈亏计算公式：中奖-投注+活动+返点 </div>
     <div data-v-e20c12c8="" class="PLSdetailCon">
       <ul data-v-e20c12c8="" class="PLSdetail fix">
-        <li data-v-e20c12c8=""><span data-v-e20c12c8="">0.00</span>投注金额</li>
-        <li data-v-e20c12c8=""><span data-v-e20c12c8="">0.00</span>中奖金额</li>
-        <li data-v-e20c12c8=""><span data-v-e20c12c8="">0.00</span>活动礼金</li>
-        <li data-v-e20c12c8=""><span data-v-e20c12c8="">0.00</span>返点金额</li>
-        <li data-v-e20c12c8=""><span data-v-e20c12c8="">0.00</span>充值金额</li>
-        <li data-v-e20c12c8=""><span data-v-e20c12c8="">0.00</span>提现金额</li>
+        <li data-v-e20c12c8=""><span data-v-e20c12c8="">{$data.bettingmoney}</span>投注金额</li>
+        <li data-v-e20c12c8=""><span data-v-e20c12c8="">{$data.winningmoney}</span>中奖金额</li>
+        <li data-v-e20c12c8=""><span data-v-e20c12c8="">{$data.hdlj}</span>活动礼金</li>
+        <li data-v-e20c12c8=""><span data-v-e20c12c8="">{$data.Rebate}</span>返点金额</li>
+        <li data-v-e20c12c8=""><span data-v-e20c12c8="">{$data.Money}</span>充值金额</li>
+        <li data-v-e20c12c8=""><span data-v-e20c12c8="">{$data.Tixian}</span>提现金额</li>
       </ul>
     </div>
   </div>
